sawa's article not png but text.

--- a/pamphlet-converter/pamphlet2019.tex
+++ b/pamphlet-converter/pamphlet2019.tex
@@ -1557,20 +1557,31 @@
 \newpage
 
   \section{写給寮外的中国人}
-  %「给」は出力できず. 中文対応するほどの能力と忍耐力は私はなかった
-%\foreignlanguage{schinese}{给}
-\begin{figure}[h]
-		\begin{center}
- 	 	\includegraphics[scale=0.90]{voice.pdf}
-  \end{center}
-		\end{figure}
 
-\newpage
-\begin{figure}[h]
-		\begin{center}
- 	 	\includegraphics[scale=0.90]{voice_2.pdf}
-  \end{center}
-		\end{figure}
+\subsection{宣传册}
+拿到宣传手册或是在官网阅览熊野寮宣传册电子版的来自中国的朋友，你好。我是住在熊野寮的中国人。从学部生1年级到5年级，住了整整5年，女生。
+
+为了让每一个看到这篇文章的人能变得哪怕有一点点想住进这个混乱的自治寮，多传达一点点我对这个寮的生活的百般感受，我想这个稿子怎么写，想了一个月。我拖稿，拖到别说截止日期，甚至所有的校阅排版都定稿完成，我自己都以为我是默认撤稿了。可我今天刚好忙完了所有毕业相关的东西，回到寮的食堂，对正在吃寮食的宣传册负责人说：“好遗憾之前没能写成稿子·……” ，负责人竟说，没问题，帮你加进去。”
+
+不知道为什么我就把刚刚发生的这个场景像这样写了进来。我想介绍这个宿舍的任何一个性质任何一个文化习惯任何一个有趣的企划活动任何一个我喜欢的或者让我困扰的人或事，就比如上面这件平凡的小事，负责人是个自恋的帅哥，寮的宣传册虽然有截止日期但是只要运营的人有热情，写稿的我还有热情，我们就把稿子加上去，因为我们是【自治】的，寮里的任何事的主体都是我们。并且我被邀请用中文写这篇“寮生的声音”，因为这个寮欢迎外国人，并且比日本的任何一个表面写着欢迎外国人的团体都要主体的，自发地欢迎外国人。因为我们是【自治】的。
+
+我大概真的不擅长写文章，或是“爱得太深”，看了上面语文能力正常的人应该是一头雾水。但是住在这里的人以及这里的人的文化着实是我希望更多人来接触的。
+
+\subsection{排他}
+大一新生都会去参加各种社团的新生欢迎会。我当时其中一个去了MS部的新欢，因为在农学部XXXXX看起来真的太浪漫了。那天白天是CM体验，晚上是跟前辈吃一起在PMC边上的部活房子里吃烧烤的交流会。我从白天一直参加到了晚上。前辈们对后辈们都很亲切耐心，边吃边聊了很久，我也聊了很多听到了很多。太阳落山到大家快看不见互相的脸的时候，一个前辈问了我一句，你的性质是留学生？还是普通的学生？我理所当然地说我是留学生。接着前辈突然露出有点歉意的微笑说：其实。。。我们不收留学生。我一时懵了不知道从哪里质疑起，选了比较指向核心的“为什么不收留学生？”这个问题问了回去，前辈和周围的前辈互相都露出了尴尬的笑容，说：“我们从来不收，我们有这样的规定，很抱歉。”就像是在对来推销报纸的人说：“我们定了其他家的报纸了，抱歉。”一样自然又正派。我记得当时的我感到了失望和愤怒，以及远远盖过前两者的巨大的震惊。因为当时的我无法理解拥有可以解出高难度的国语，社会，数学，物理等等多分野的题目的聪明头脑的人，聚集在一起，挺着胸脯对着面前的人做出了无法说出根据的排挤行为，为何没有人表现得对自己的行为有一丝反感和迟疑，哪怕是思考过的痕迹。
+
+如果这是朋友圈的煽动性的厕所读物那么接下来跟着的句子会是“日本人就是如此排挤中国人”，但是现在我并不想申诉我遭到了“排挤”，因为在日本的纵向服从的社会环境下，在为了普及纵向服从而诞生的“部活”里，存在不允许质疑的不合理的规定，排除外来的思考方式，集体里的人主动回避质疑和思考，是再合理不过的事情了。（同理，独裁状态下的国家成长起来的我，一定更是如此。）
+
+这样看来，熊野寮是一个能够自我反省的非常异类的团体。
+
+从我刚住进寮里，到去年年底为止，入寮说明要项上都有一项选考标准，那就是外国人必须有一定的日语水平才能入住。这条规定想过去十分合理。我很长一段时间也对这个规定没有感到任何不妥。因为熊野寮里最最最根本的原则，是寮里的任何事宜都是通过寮生之间的交流讨论做出决定的。那么语言不通的外国人，自然没有办法参与到寮内的各种会议之中，也无法对寮内的交流做出贡献，收留他们对寮的运营是没有任何好处的。就好比文化上没有习得对前辈绝对的纵向服从的留学生，对于MC部是不合理的需要被排除的是一样的道理。如果熊野寮是一个为了运营管理而运营管理的团体,那么【拥有一定的日语能力】这一项选考标准永远都不会迎来被删除的这一天。那么我也说不定就是那个对没有日语能力的留学生解释说“因为我们有这样的规定”的人，并且还一边读着厕所文学一边也申诉自己曾经遭受过的排挤。庆幸经过寮生不屑努力的讨论，尝试，和准备工作，熊野寮删除了【拥有一定的日语能力】这样一项意味着“排挤”的选考标准。我们思考了我们的排除对于被排除的人来说意味着什么，对我们来说意味着什么，思考了我们应该去追求的是什么样的原则。因为我们是【自治】的。因为每一个人心里其实都有质疑自己的行为的契机和发现，自治的环境给了我们每个人说出自己的质疑并且去改变的自由，所以熊野寮在我看来是在不断变化不断成长的。当然这几年来的变化中不光有成长，也有在我心里算成是倒退的变化。这也大概只能无奈地归结于因为我们是【自治】的了。
+
+\subsection{我}
+我在熊野寮住了5年。第一年受着前辈的爱护和照顾，拼命在寮里组乐队，尽情地玩了自己想玩的东西。第二年第三年我开始担起了寮的自治运营的一些职位。第四年第五年我有点累了，遇到了人生的瓶颈一样的时期，对待寮里的工作和生活都很懒散。在这个寮里有时候我觉得自己很多方面跟别人的成长环境不同，所以很难很好地去理解体谅周围的人，但是更多时候我感受到的是每一个人都是独特的人，在这里每一个独特的人的意见和人格都是受到平等的尊重的（也或许还未到这种理想的状态，只不过是很多寮生希望是这样的）。我觉得这是理所应该的，又是十分珍贵的事情。我不知道我写的这篇文章有没有一点看上去像宗教煽动的感觉。但是我确实是希望有更多人的来了解这个寮了解在日本已经濒临灭绝的学生自治的珍贵的文化。
+
+谢谢你读完这篇文章，如果你有一点点对熊野寮感兴趣了，不妨住进去试试。祝你有一个丰富的难忘的大学生活。
+
+
 
     {\bf (文:さわ)}
 
