--- a/pamphlet-converter/pamphlet2019.tex
+++ b/pamphlet-converter/pamphlet2019.tex
@@ -127,17 +127,8 @@
 %\title{入寮募集要項}
 
 \begin{document}
-  %\maketitle
    
-\setcounter{page}{1}
-  \pagenumbering{arabic}
-  \setcounter{tocdepth}{1}
-  \tableofcontents
-
-    \thispagestyle{empty}
-
-  \newpage
- 
+\includegraphics{kumano-top.jpg}
 
 \chapter{入寮にあたって}
 	\section{熊野寮概要} \label{sec:abst}
@@ -959,11 +950,7 @@
 			このように, 寮生それぞれの生活リズムで生きています. もちろん,周りに寝ている人がいる場合は少し静かにするなどの配慮は必要です. お互いの生活習慣に理解を持ちながら, いい寮生活を送ってくださいね.
 
 \newpage
-	\section{座談会コーナー}
-
-	\setcounter{footnote}{0}
-
-		\subsection{1回生座談会}
+		\section{1回生座談会}
 
 		\begin{itembox}[l]{\bf 参加者}
 		\begin{description}
@@ -1301,7 +1288,7 @@
 		\textbf{---この後2時間食堂でお喋りし, 皆が寝たのは早朝5時を過ぎた頃でした. }
 \normalsize
 
-		\subsection{大学生活を送る上でちょっと考えてほしいこと}
+		\section{大学生活を送る上でちょっと考えてほしいこと}
 
 		 入寮パンフにセクハラやハラスメントの話を載せたいよねということで, 座談会をすることにしました. 高校までの学校の授業では教えないし, 特にそういうこと考えずに過ごしてきた人も多いだろうから, 少し考えてほしいな, と. 会社のセクハラ対応ガイドラインみたいなのって, あれしちゃだめこれしちゃ駄目って禁止事項が羅列されています. でもそれはかえって, それさえしなければいいんでしょという思考停止を生むと思います. そうではなくて, 今後大学生活を送っていく上での問題提起として読んでください.
 		 
