--- a/pamphlet-converter/pamphlet2019.tex
+++ b/pamphlet-converter/pamphlet2019.tex
@@ -499,20 +499,20 @@
 
 \begin{table}[htb]
   \begin{tabular}{|c||c|c|} \hline
-	\multirow{5}{*}{4月}	& 春のSC新歓		& 詳しくは面接で.   \\
-    						& 花見			& 鴨川で桜を見る, という体の飲み会.  \\
-      						& 古本市			& 寮中の本を集めて売りさばく, 以上. \\
-    	  					& 春新歓			& MUC参照で, プリーズ.   \\  %ページ数参照を用いる
-      						& 全寮新歓		& 熊野寮最大規模の新歓.  \\ \hline
-	\multirow{2}{*}{5月}	& 大文字コンパ	& 数少ない体育系行事. 登山に次ぐ登山, そして下山.  \\
-						& くまのまつり	& 寮全体のお祭り. ご近所さんと一緒に地域交流.  \\ \hline
+	4月	& 春のSC新歓		& 詳しくは面接で.   \\
+    4月						& 花見			& 鴨川で桜を見る, という体の飲み会.  \\
+     4月 						& 古本市			& 寮中の本を集めて売りさばく, 以上. \\
+    4月	  					& 春新歓			& MUC参照で, プリーズ.   \\  %ページ数参照を用いる
+     4月 						& 全寮新歓		& 熊野寮最大規模の新歓.  \\ \hline
+	5月	& 大文字コンパ	& 数少ない体育系行事. 登山に次ぐ登山, そして下山.  \\
+		5月				& くまのまつり	& 寮全体のお祭り. ご近所さんと一緒に地域交流.  \\ \hline
 			6月			& 雀皇戦			& 麻雀大会その1. 建校記念日前日にオールで麻雀.  \\ \hline
 			7月			& 七夕コンパ		& 雨の記憶しかない京都の七夕. 夏っぽいことします.  \\ \hline
 			9月			& 秋のSC新歓		& 入寮面接のたびに新歓を行う. それが熊野寮.  \\ \hline
 			10月			& ナス$ \cdot $ サンマパ	& 秋の風物詩, ナスとサンマをひたすら食う飲み会.  \\ \hline
-	\multirow{3}{*}{12月}	& 寮祭			& 熊野寮全体で行う年に一度のお祭りだー.  \\
-						& 麻将皇帝戦		& 麻雀大会その2. 目指せ, 麻雀二冠王. \\
-						& 全寮コンパ		& 寮最大のコンパ, と言っても過言ではないかも.  \\ \hline
+	12月	& 寮祭			& 熊野寮全体で行う年に一度のお祭りだー.  \\
+		12月				& 麻将皇帝戦		& 麻雀大会その2. 目指せ, 麻雀二冠王. \\
+	12月					& 全寮コンパ		& 寮最大のコンパ, と言っても過言ではないかも.  \\ \hline
 			1月			& 新年会			& 今年もよろしくお願いします. \\ \hline
 			2月			& 追い出しコンパ	& みんなこうやって巣立っていくんだなあー. みつを.  \\ \hline
 			3月			& 追いコンLIVE	& みんなこうやって, 以下略. これもMUC参照で.  \\ \hline
