--- a/pamphlet-converter/pamphlet2019.tex
+++ b/pamphlet-converter/pamphlet2019.tex
@@ -1972,8 +1972,8 @@
 
 			議題の提起者. 資料を作成していることが多い. 言い出しっぺの提起内容及び参考資料の洗練具合は議論の円滑さを最も強く決定づける, と言っても過言ではない. それ故, 参加者の多い寮生大会等の議論に議題を提起する場合は, 事前の議論でプロテスタントやプロバイダー(後述) の意見を集約し, 整理した上で元々の議案にできるだけ反映させる必要がある. この作業が十分行われているかどうかを判定する機関が代議員会であり, もし不十分という結論がでたらその議案は寮生大会では議論されず, 採決も行えない. しかし, たとえ代議員会を通っても, 提起内容が多数の者にとってどうでもよいものであるように思われる時, 言い出しっぺは議場のヘイトを買うこととなる. なお, 代議員会出席者が, 期待されている業務をしっかりこなしているとは限らない.
 
-			\item[$ \beta $ . プロテスタント]  \footnote{キリスト教の一宗派. 16世紀の宗教改革でローマ$ \cdot $ カトリックから分離する形で成立した. 「プロテスタント」とは``抗議する者''を意味し, この文章においてはその意味を汲んでこの語を使用した. }
-提起された議案に反対する立場. しかし, 反対理由$ \cdot $ 反対手法は実に多様であり, 他の章の全ての立場になり得る. 後述の「プロバイダー」「メタ論者」「定義厨」に擬態していることもしばしばあり, プロテスタントかそうでないのか見分けを付けるのが困難なこともある.
+			\item[$ \beta $ . プロテスタント \footnote{キリスト教の一宗派. 16世紀の宗教改革でローマ$ \cdot $ カトリックから分離する形で成立した. 「プロテスタント」とは``抗議する者''を意味し, この文章においてはその意味を汲んでこの語を使用した. }]
+			提起された議案に反対する立場. しかし, 反対理由$ \cdot $ 反対手法は実に多様であり, 他の章の全ての立場になり得る. 後述の「プロバイダー」「メタ論者」「定義厨」に擬態していることもしばしばあり, プロテスタントかそうでないのか見分けを付けるのが困難なこともある.
 
 
 			\item[$ \gamma $ . プロバイダー]
