--- a/pamphlet-converter/pamphlet2019.tex
+++ b/pamphlet-converter/pamphlet2019.tex
@@ -128,7 +128,7 @@
 
 \begin{document}
    
-\includegraphics{kumano-top.jpg}
+\includegraphics{slide0.JPG}
 
 \chapter{入寮にあたって}
 	\section{熊野寮概要} \label{sec:abst}
